--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ nav ul li:hover { background:#eee; }
 /* Responsive */
 @media (max-width:600px) {
   #booksContainer { grid-template-columns: repeat(2, 1fr); }
-  .bookCard img { width:100px; height:140px; }
-  .bookCard h3 { font-size:14px; }
-  .bookCard p { font-size:12px; }
-  .bookCard a { font-size:12px; padding:5px 8px; }
+  .bookCard img { width:90px; height:130px; }
+  .bookCard h3 { font-size:14px; margin:5px 0; }
+  .bookCard p { font-size:12px; margin:3px 0; }
+  .bookCard a { font-size:12px; padding:4px 6px; }
 }
 </style>
 </head>
@@ -169,6 +169,7 @@ loadBooks();
 </script>
 </body>
 </html>
+
 
 
 
