--- a/index.html
+++ b/index.html
@@ -8,27 +8,104 @@
 body { font-family: Arial; margin:0; padding:0; background:#f5f5f5; }
 
 /* Header */
-header { background:#2b3a67; color:white; padding:10px 20px; display:flex; align-items:center; justify-content:center; position:relative; flex-wrap:wrap; }
-header h1 { margin:0; font-size:24px; text-align:center; width:100%; }
-#searchBox { margin-top:10px; padding:5px 10px; border-radius:5px; border:none; width:80%; max-width:400px; }
+header { 
+    background:#2b3a67; 
+    color:white; 
+    padding:10px 20px; 
+    display:flex; 
+    flex-direction:column; 
+    align-items:center; 
+    justify-content:center; 
+    position:relative; 
+}
+header h1 { 
+    margin:0; 
+    font-size:26px; 
+    text-align:center; 
+    width:100%; 
+}
+#searchBox { 
+    margin-top:10px; 
+    padding:7px 12px; 
+    border-radius:5px; 
+    border:none; 
+    width:90%; 
+    max-width:400px; 
+    font-size:14px; 
+}
 
 /* Burger menu */
-#burger { font-size:24px; cursor:pointer; position:absolute; left:20px; top:15px; color:white; z-index:20; }
+#burger { 
+    font-size:28px; 
+    cursor:pointer; 
+    position:absolute; 
+    left:20px; 
+    top:15px; 
+    color:white; 
+    z-index:20; 
+}
 
 /* Navigation Menu */
-nav { display:none; background:white; padding:10px; position:fixed; top:0; left:0; width:250px; height:100%; box-shadow:2px 0 6px rgba(0,0,0,0.2); z-index:15; border-radius:0 10px 10px 0; }
-nav ul { list-style:none; padding:0; margin:0; margin-top:30px; }
-nav ul li { padding:12px 10px; border-bottom:1px solid #ccc; cursor:pointer; font-weight:bold; }
+nav { 
+    display:none; 
+    background:white; 
+    padding:10px; 
+    position:fixed; 
+    top:0; 
+    left:0; 
+    width:250px; 
+    height:100%; 
+    box-shadow:2px 0 6px rgba(0,0,0,0.2); 
+    z-index:15; 
+    border-radius:0 10px 10px 0; 
+}
+nav ul { 
+    list-style:none; 
+    padding:0; 
+    margin:0; 
+    margin-top:30px; 
+}
+nav ul li { 
+    padding:12px 10px; 
+    border-bottom:1px solid #ccc; 
+    cursor:pointer; 
+    font-weight:bold; 
+}
 nav ul li:hover { background:#eee; }
-#closeNav { text-align:right; font-size:25px; cursor:pointer; }
+#closeNav { 
+    text-align:right; 
+    font-size:25px; 
+    cursor:pointer; 
+    margin-bottom:10px;
+}
 
 /* Books container */
-#booksContainer { max-width:1000px; margin:20px auto; display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap:20px; padding:0 10px; }
-.bookCard { background:white; padding:8px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.2); text-align:center; display:flex; flex-direction:column; align-items:center; cursor:pointer; border:2px solid #2b3a67; max-width:220px; /* kjo i bën kontainerat më ngushtë */ margin:0 auto; /* për qendërzim */}
-.bookCard img { width:120px; height:160px; object-fit:cover; border-radius:5px; }
-.bookCard h3 { margin:8px 0 4px; font-size:16px; }
+#booksContainer { 
+    max-width:1000px; 
+    margin:20px auto; 
+    display: grid; 
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); 
+    gap:20px; 
+    padding:0 10px; 
+}
+.bookCard { 
+    background:white; 
+    padding:10px; 
+    border-radius:10px; 
+    box-shadow:0 2px 6px rgba(0,0,0,0.2); 
+    text-align:center; 
+    display:flex; 
+    flex-direction:column; 
+    align-items:center; 
+    cursor:pointer; 
+    border:2px solid #2b3a67; 
+    transition: transform 0.2s; 
+}
+.bookCard:hover { transform: translateY(-5px); }
+.bookCard img { width:140px; height:180px; object-fit:cover; border-radius:5px; }
+.bookCard h3 { margin:10px 0 6px; font-size:16px; }
 .bookCard p { font-size:13px; margin:4px 0; }
-.bookCard a { display:inline-block; margin-top:6px; padding:6px 10px; background:#2b3a67; color:white; border-radius:5px; text-decoration:none; font-weight:bold; transition:0.3s; font-size:14px; }
+.bookCard a { display:inline-block; margin-top:6px; padding:6px 12px; background:#2b3a67; color:white; border-radius:5px; text-decoration:none; font-weight:bold; transition:0.3s; font-size:14px; }
 .bookCard a:hover { background:#1d2750; }
 
 /* Modal per detajet e librit */
@@ -38,12 +115,19 @@ nav ul li:hover { background:#eee; }
 #closeModal { cursor:pointer; float:right; font-size:22px; font-weight:bold; }
 
 /* Responsive */
-@media (max-width:600px) {
-  #booksContainer { grid-template-columns: repeat(2, 1fr); }
-  .bookCard img { width:90px; height:130px; }
-  .bookCard h3 { font-size:14px; margin:5px 0; }
-  .bookCard p { font-size:12px; margin:3px 0; }
+@media (max-width:800px) {
+  #booksContainer { grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap:15px; }
+  .bookCard img { width:120px; height:160px; }
+  .bookCard h3 { font-size:14px; }
+  .bookCard p { font-size:12px; }
   .bookCard a { font-size:12px; padding:4px 6px; }
+}
+@media (max-width:500px) {
+  #booksContainer { grid-template-columns: repeat(2, 1fr); gap:10px; padding:0 5px; }
+  .bookCard img { width:100px; height:140px; }
+  .bookCard h3 { font-size:13px; }
+  .bookCard p { font-size:11px; }
+  .bookCard a { font-size:11px; padding:3px 5px; }
 }
 </style>
 </head>
@@ -169,11 +253,3 @@ loadBooks();
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
