--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="sq">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Biblioteka Online</title>
 <style>
-body { font-family: Arial; margin:0; padding:0; background:#f5f5f5; }
+body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f5f5f5; }
 
 /* Header */
 header { 
@@ -20,7 +20,7 @@ header {
 }
 header h1 { 
     margin:0; 
-    font-size:26px; 
+    font-size:24px; 
     text-align:center; 
     width:100%; 
 }
@@ -58,6 +58,7 @@ nav {
     box-shadow:2px 0 6px rgba(0,0,0,0.2); 
     z-index:15; 
     border-radius:0 10px 10px 0; 
+    overflow-y:auto;
 }
 nav ul { 
     list-style:none; 
@@ -84,8 +85,8 @@ nav ul li:hover { background:#eee; }
     max-width:1000px; 
     margin:20px auto; 
     display: grid; 
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); 
-    gap:20px; 
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); 
+    gap:15px; 
     padding:0 10px; 
 }
 .bookCard { 
@@ -99,31 +100,31 @@ nav ul li:hover { background:#eee; }
     align-items:center; 
     cursor:pointer; 
     border:2px solid #2b3a67; 
-    transition: transform 0.2s; 
+    transition: transform 0.2s, box-shadow 0.2s; 
 }
-.bookCard:hover { transform: translateY(-5px); }
+.bookCard:hover { transform: translateY(-3px); box-shadow:0 4px 8px rgba(0,0,0,0.3); }
 .bookCard img { width:140px; height:180px; object-fit:cover; border-radius:5px; }
 .bookCard h3 { margin:10px 0 6px; font-size:16px; }
 .bookCard p { font-size:13px; margin:4px 0; }
 .bookCard a { display:inline-block; margin-top:6px; padding:6px 12px; background:#2b3a67; color:white; border-radius:5px; text-decoration:none; font-weight:bold; transition:0.3s; font-size:14px; }
 .bookCard a:hover { background:#1d2750; }
 
-/* Modal per detajet e librit */
-#bookModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:100; }
-#bookModalContent { background:white; padding:20px; border-radius:10px; max-width:400px; width:90%; max-height:90%; overflow-y:auto; position:relative; }
+/* Modal */
+#bookModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:100; padding:10px; }
+#bookModalContent { background:white; padding:20px; border-radius:10px; max-width:400px; width:100%; max-height:90%; overflow-y:auto; position:relative; }
 #bookModalContent img { width:100%; height:auto; border-radius:5px; }
 #closeModal { cursor:pointer; float:right; font-size:22px; font-weight:bold; }
 
 /* Responsive */
 @media (max-width:800px) {
-  #booksContainer { grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap:15px; }
+  #booksContainer { grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap:12px; }
   .bookCard img { width:120px; height:160px; }
   .bookCard h3 { font-size:14px; }
   .bookCard p { font-size:12px; }
   .bookCard a { font-size:12px; padding:4px 6px; }
 }
 @media (max-width:500px) {
-  #booksContainer { grid-template-columns: repeat(2, 1fr); gap:10px; padding:0 5px; }
+  #booksContainer { grid-template-columns: repeat(2, 1fr); gap:10px; }
   .bookCard img { width:100px; height:140px; }
   .bookCard h3 { font-size:13px; }
   .bookCard p { font-size:11px; }
@@ -151,7 +152,7 @@ nav ul li:hover { background:#eee; }
 
 <div id="booksContainer"></div>
 
-<!-- Modal per detajet e librit -->
+<!-- Modal -->
 <div id="bookModal">
   <div id="bookModalContent">
     <span id="closeModal">✖</span>
@@ -213,7 +214,9 @@ async function loadBooks(category = null, searchText = "") {
       <p><strong>Viti:</strong> ${data.year}</p>
       <a href="${data.pdfUrl}" target="_blank">Shkarko PDF</a>
     `;
-    div.addEventListener("click", () => showBookModal(data));
+    div.addEventListener("click", (e) => {
+      if(e.target.tagName !== 'A') showBookModal(data);
+    });
     booksContainer.appendChild(div);
   });
 }
