--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@ header h1 {
     color:white; 
     z-index:20; 
 }
+    /* Close nav (iks) */
+#closeNav { 
+    text-align:right; 
+    font-size:25px; 
+    cursor:pointer; 
+    margin-bottom:10px;
+    display:block;
+    padding-right:10px; /* largimi nga skaji djathtas */
+}
 
 /* Navigation Menu */
 nav { 
@@ -259,6 +268,7 @@ loadBooks();
 </script>
 </body>
 </html>
+
 
 
 
