--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@ nav ul li:hover { background:#eee; }
 
 @media (max-width:500px) {
   #booksContainer { grid-template-columns: repeat(2, 1fr); gap:10px; padding:0 5px; }
-  .bookCard img { width:100px; height:140px; }
-  .bookCard h3 { font-size:13px; }
-  .bookCard p { font-size:11px; }
+  .bookCard img { width:110px; height:150px; }
+  .bookCard h3 { font-size:13px; font-weight:bold; }
+  .bookCard p { font-size:11px; font-weight:bold; margin:2px 0; }
   .bookCard a { font-size:11px; padding:3px 5px; }
 }
 </style>
@@ -268,6 +268,7 @@ loadBooks();
 </script>
 </body>
 </html>
+
 
 
 
