--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ nav ul li:hover { background:#eee; }
 @media (max-width:800px) {
   #booksContainer { grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap:12px; }
   .bookCard img { width:120px; height:160px; }
-  .bookCard h3 { font-size:14px; }
-  .bookCard p { font-size:12px; }
+  .bookCard h3 { font-size:14px; font-weight:bold;}
+  .bookCard p { font-size:12px; font-weight:bold; margin:2px 0;}
   .bookCard a { font-size:12px; padding:4px 6px; }
 }
 
@@ -268,6 +268,7 @@ loadBooks();
 </script>
 </body>
 </html>
+
 
 
 
