--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ header h1 {
     width:100%; 
 }
     .bookTitle, .bookAuthor, .bookYear {
-  font-weight: bold; /* do të jetë bold gjithmonë, desktop dhe celular */
+  font-weight: bold !important;
 }
 #searchBox { 
     margin-top:10px; 
@@ -271,6 +271,7 @@ loadBooks();
 </script>
 </body>
 </html>
+
 
 
 
